web-infras/parser/tests/fixtures/babel/core/uncategorised/388/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|{ set 1 }
 |     ^
